# PADsolver

./: CMakeLists.txt  README.md  board.cpp  board.h  cmake_install.cmake  combo.cpp  combo.h  combothread.cpp  combothread.h  main.cpp  main.qml  orb.cpp  orb.h  pad.pro  padgui.cpp  padgui.h  padsolver  padsolver.cpp  resources.qrc  settings.h  solver.cpp  solver.h  solvestate.cpp  solvestate.h  solvethread.cpp  solvethread.h
